--- a/doc/CHANGES
+++ b/doc/CHANGES
@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11928 2005/11/14 04:06:06 rillig Exp $
+$NetBSD: CHANGES,v 1.11929 2005/11/14 06:06:20 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -5216,3 +5216,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added databases/py-mssql version 0.7.3 [minskim 2005-11-14]
 	Updated pkgtools/pkglint to 4.41 [rillig 2005-11-14]
 	Updated fonts/adobe-cmaps to 20051109 [minskim 2005-11-14]
+	Updated net/samba to 3.0.20.2 [jlam 2005-11-14]
