--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5804 2006/12/31 18:50:10 xtraeme Exp $
+$NetBSD: TODO,v 1.5805 2007/01/01 12:56:45 wiz Exp $
 
 Suggested new packages
 ======================
@@ -678,7 +678,6 @@ Suggested package updates
 	o moc-2.4.1
 	o molden-4.4
 	o mono-1.2.2
-	o monotone-0.32 [jmmv]
 	o moscow_ml-2.01
 	o most-4.10.2
 	o mowitz-0.3.0
