--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5832 2007/01/06 15:35:15 wiz Exp $
+$NetBSD: TODO,v 1.5833 2007/01/06 15:40:00 rillig Exp $
 
 Suggested new packages
 ======================
@@ -905,7 +905,6 @@ Suggested package updates
 	o pnetC-0.7.4
 	o pnetlib-0.7.2 [pkg/31950]
 	o pnetlib-0.7.4
-	o png-1.2.15
 	o po4a-0.29
 	o poedit-1.3.6
 	o poppy-4.01
