--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5848 2007/01/07 12:29:32 wiz Exp $
+$NetBSD: TODO,v 1.5849 2007/01/07 13:48:11 adam Exp $
 
 Suggested new packages
 ======================
@@ -543,7 +543,6 @@ Suggested package updates
 	o imapsync-1.197
 	o instiki-0.10.2
 	o intercal-0.24 [dillo]
-	o intltool-0.35.3
 	o ion3-devel-20061223
 	o iozone-3.271
 	o ipcalc-0.41
