--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5849 2007/01/07 13:48:11 adam Exp $
+$NetBSD: TODO,v 1.5850 2007/01/07 14:41:40 wiz Exp $
 
 Suggested new packages
 ======================
@@ -686,7 +686,6 @@ Suggested package updates
 	o nap-1.5.3
 	o nautilus-cd-burner-2.16.2
 	o ncftp2-2.8.2
-	o ncurses-5.6
 	o ncview-1.92e
 	o neon-0.26.1 [pkg/34310]
 	o neon-0.26.2
