--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5859 2007/01/10 14:09:11 tron Exp $
+$NetBSD: TODO,v 1.5860 2007/01/11 22:15:34 wiz Exp $
 
 Suggested new packages
 ======================
@@ -71,10 +71,6 @@ Suggested new packages
 
 	xftlsfonts
 	FreeType font list displayer.
-
-	gtkfontsel
-	http://packages.qa.debian.org/g/gtkfontsel.html
-	GTK-based utility for browsing, previewing and selecting a X11 font.
 
 	choosefont
 	http://choosefont.sourceforge.net/
