--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5891 2007/01/16 11:05:12 tonio Exp $
+$NetBSD: TODO,v 1.5892 2007/01/16 12:00:43 adam Exp $
 
 Suggested new packages
 ======================
@@ -328,7 +328,6 @@ Suggested package updates
 	o checkbot-1.77
 	o cherokee-0.5.6
 	o chrony-1.21
-	o cinepaint-0.21.2
 	o cint-5.16
 	o cjk-lyx-1.3.3
 	o clisp-2.41
