--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5895 2007/01/17 00:17:50 wiz Exp $
+$NetBSD: TODO,v 1.5896 2007/01/17 13:19:30 tonio Exp $
 
 Suggested new packages
 ======================
@@ -407,7 +407,6 @@ Suggested package updates
 	o faces-1.7.7
 	o fd-2.08a
 	o fdgw-20040609
-	o fetchmail-6.3.6
 	o fhist-1.14
 	o file-4.18
 	o file-roller-2.16.2
