--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5922 2007/01/21 12:55:19 wiz Exp $
+$NetBSD: TODO,v 1.5923 2007/01/21 16:53:35 obache Exp $
 
 Suggested new packages
 ======================
@@ -264,7 +264,6 @@ Suggested package updates
 	o ap-xslt-1.3.8
 	o ap2-chroot-0.5
 	o ap2-transform-0.6.0
-	o apache22-2.2.4
 	o apcupsd-3.10.16
 	o aqsis-1.0.1 [heinz]
 	o aranym-0.9.0
