--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5952 2007/01/29 06:46:58 minskim Exp $
+$NetBSD: TODO,v 1.5953 2007/01/29 21:19:32 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1098,7 +1098,6 @@ Suggested package updates
 	o weewm-0.01
 	o winbind-3.0.13
 	o windowlab-1.34
-	o wine-0.9.30
 	o wmweather-2.4.3
 	o wxGTK-2.8
 	o wxRemind-0.7.5
