--- a/www/seamonkey/INSTALL
+++ b/www/seamonkey/INSTALL
@@ -1,4 +1,4 @@
-# $NetBSD: INSTALL,v 1.1.1.1 2006/03/30 19:15:38 ghen Exp $
+# $NetBSD: INSTALL,v 1.2 2006/10/08 13:10:30 ghen Exp $
 
 MOZILLA="@MOZILLA@"
 MOZILLA_BIN="@MOZILLA_BIN@"
@@ -8,7 +8,7 @@ export MOZILLA_FIVE_HOME
 case ${STAGE} in
 POST-INSTALL)
 	${MKDIR} -p "./tmpdir-${PKGNAME}"
-	LD_LIBRARY_PATH="${MOZILLA_FIVE_HOME}" HOME="./tmpdir-${PKGNAME}" \
+	LD_LIBRARY_PATH="${MOZILLA_FIVE_HOME}:${PKG_PREFIX}/lib" HOME="./tmpdir-${PKGNAME}" \
 		${MOZILLA_FIVE_HOME}/regxpcom
 	if ${TEST} -x ${MOZILLA_FIVE_HOME}/regchrome; then
 		LD_LIBRARY_PATH="${MOZILLA_FIVE_HOME}" \
