--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5991 2007/02/08 17:07:24 xtraeme Exp $
+$NetBSD: TODO,v 1.5992 2007/02/08 17:28:17 wiz Exp $
 
 Suggested new packages
 ======================
@@ -871,7 +871,6 @@ Suggested package updates
 	o poppy-4.01
 	o poptop-1.3.0
 	o posh-0.4.3
-	o postfix-2.3.7
 	o postgresql81-postgis-1.1.6
 	o postgresql_autodoc-1.25
 	o postgrey-1.27
