--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.5998 2007/02/16 06:46:26 wiz Exp $
+$NetBSD: TODO,v 1.5999 2007/02/16 14:41:30 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -688,7 +688,6 @@ Suggested package updates
 	o objc-3.2.7
 	o ocrad-0.16
 	o odbc-postgresql-8.0.7
-	o offlineimap-4.0.11
 	o ogre-0.12.3
 	o onyx-5.1.2
 	o oo2c-2.1.7
