--- a/misc/autocue/files/autocue.1
+++ b/misc/autocue/files/autocue.1
@@ -1,4 +1,4 @@
-.\" $NetBSD: autocue.1,v 1.1.1.1 2006/01/28 20:47:22 agc Exp $
+.\" $NetBSD: autocue.1,v 1.2 2007/02/24 12:16:12 agc Exp $
 .\"
 .\" Copyright © 2006 Alistair Crooks.  All rights reserved.
 .\"
@@ -91,7 +91,8 @@ The
 utility exits 0 on success, and \*[Gt]0 if an error occurs.
 .Sh SEE ALSO
 .Xr kill 1
-.Sh AUTHOR
+.Sh AUTHORS
 The
 .Nm
-was written by Alistair Crooks (agc@NetBSD.org).
+was written by
+.An Alistair Crooks Aq agc@NetBSD.org .
