--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6062 2007/03/03 13:22:16 adrianp Exp $
+$NetBSD: TODO,v 1.6063 2007/03/04 09:36:45 wiz Exp $
 
 Suggested new packages
 ======================
@@ -643,7 +643,6 @@ Suggested package updates
 	o multi-gnome-terminal-1.6.2
 	o multitail-4.2.0
 	o muse-0.9.1
-	o mutt-devel-1.5.14
 	o mysql4-client-4.1.22
 	o mysql4-server-4.1.22
 	o nagios-2.7
