--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6067 2007/03/05 12:09:38 ghen Exp $
+$NetBSD: TODO,v 1.6068 2007/03/05 20:35:44 adrianp Exp $
 
 Suggested new packages
 ======================
@@ -1019,7 +1019,6 @@ Suggested package updates
 	o weewm-0.01
 	o winbind-3.0.13
 	o windowlab-1.34
-	o wine-0.9.32
 	o wmweather-2.4.3
 	o worker-2.14.2
 	o wwwoffle-2.9b
