--- a/net/uucp/files/uucpd/uucpd.8
+++ b/net/uucp/files/uucpd/uucpd.8
@@ -1,4 +1,4 @@
-.\"	$NetBSD: uucpd.8,v 1.5 2002/01/15 02:29:01 wiz Exp $
+.\"	$NetBSD: uucpd.8,v 1.1 2007/03/15 20:02:20 christos Exp $
 .\"
 .\" Copyright (c) 1998 Matthew R. Green
 .\" All rights reserved.
@@ -48,7 +48,7 @@ file transfer daemon, if the following conditions are met:
 the username and password match a valid account
 .It
 the accounts shell is
-.Dq /usr/libexec/uucp/uucico .
+.Dq @PREFIX@/libexec/uucp/uucico .
 .El
 .Pp
 .Nm
