--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6176 2007/04/02 15:25:53 taca Exp $
+$NetBSD: TODO,v 1.6177 2007/04/02 22:35:45 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1092,8 +1092,6 @@ Suggested package updates
 	o poptop-1.3.0
 	o posh-0.5.5
 	o postal-0.66
-	o postfix-2.3.8
-	o postfix-2.4.0
 	o postgresql-autodoc-1.30
 	o postgresql_autodoc-1.25
 	o powermanga-0.80
