--- a/lang/ruby18-base/INSTALL
+++ b/lang/ruby18-base/INSTALL
@@ -1,14 +1,13 @@
-# $NetBSD: INSTALL,v 1.1 2005/11/02 08:56:39 taca Exp $
+# $NetBSD: INSTALL,v 1.2 2007/01/28 15:15:58 taca Exp $
 
 DATE="@DATE@"
 PREFIX="@PREFIX@"
 RUBY_SITERIDIR="${PREFIX}/@RUBY_SITERIDIR@"
-RUBY_SYSRIDIR="${PREFIX}/@RUBY_SYSRIDIR@"
 rid="${RUBY_SITERIDIR}/created.rid"
 
 case ${STAGE} in
 POST-INSTALL)
-	if [ -d ${RUBY_SYSRIDIR} ]; then
+	if [ -d ${RUBY_SITERIDIR} ]; then
 		${DATE} > ${rid}
 	fi
 	;;
