--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6186 2007/04/08 13:45:30 wiz Exp $
+$NetBSD: TODO,v 1.6187 2007/04/08 16:10:09 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -841,6 +841,7 @@ Suggested package updates
 	o multitail-5.0.0
 	o muse-0.9.2
 	o musicpd-0.12.2
+	o mutt-devel-1.5.15
 	o mysql4-client-4.1.22
 	o mysql4-server-4.1.22
 	o nagios-3.0a2
